--- a/package.json
+++ b/package.json
@@ -8,10 +8,23 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "netlify-cli": "^17.16.1",
     "vite": "^3.2.4"
   },
   "dependencies": {
     "firebase": "^10.8.0",
     "openai": "^4.26.1"
-  }
+  },
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/agits-code/chatBot.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/agits-code/chatBot/issues"
+  },
+  "homepage": "https://github.com/agits-code/chatBot#readme",
+  "description": ""
 }
